<resources>
    <string name="app_name">FootballClubSchedule</string>
    <string name="teams">Teams</string>
    <string name="favorites">Favorites</string>
    <array name="league">
        <item>English Premier League</item><!--  -->
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goals">Goals</string>
    <string name="defense">Defense</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="midfield">Midfield</string>
    <string name="lineups">Lineups</string>
    <string name="goal_details">Goal Details</string>
    <string name="vs">VS</string>
    <string name="todayMatch">Previous Match</string>
    <string name="nextMatch">Next Match</string>
    <string name="matches">Matches</string>
    <string name="todo">TODO</string>
    <string-array name="suggestions">
        <item>Maçã</item>
        <item>Damasco</item>
        <item>Abacate</item>
        <item>Banana</item>
        <item>Mirtilo</item>
        <item>Amora preta</item>
        <item>Cenoura</item>
        <item>Cereja</item>
        <item>Laranja</item>
        <item>Batata</item>
        <item>Pêssego</item>
        <item>Maracujá</item>
        <item>Pêra</item>
        <item>Morango</item>
    </string-array>
</resources>
