<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >
        <TextView
                android:id="@+id/dateEventSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@color/myOrange"
                android:gravity="center"
        />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
        >
            <ImageView
                    android:id="@+id/teamBadgeHome"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:text="@string/vs"
                    android:gravity="center"
            />
            <ImageView
                    android:id="@+id/teamBadgeAway"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
            />

        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:id="@+id/teamHomeGoals"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/goals"
                    android:gravity="center"
                    android:textStyle="bold"
            />
            <TextView
                    android:id="@+id/teamAwayGoals"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:id="@+id/teamHomeGoalDetail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="15dp"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/goal_details"
            />
            <TextView
                    android:id="@+id/teamAwayGoalDetail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="15dp"
            />
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lineups"
                android:gravity="center"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >

            <TextView
                    android:id="@+id/teamHomeGoalkeeper"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="15dp"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_keeper"
                    android:gravity="center"
                    android:textStyle="bold"
            />
            <TextView
                    android:id="@+id/teamAwayGoalkeeper"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="15dp"
            />
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >

            <TextView
                    android:id="@+id/teamHomeDefense"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="15dp"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/defense"
                    android:gravity="center"
                    android:textStyle="bold"
            />
            <TextView
                    android:id="@+id/teamAwayDefense"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="15dp"
            />
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >

            <TextView
                    android:id="@+id/teamHomeMidfield"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="15dp"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/midfield"
                    android:gravity="center"
                    android:textStyle="bold"
            />
            <TextView
                    android:id="@+id/teamAwayMidfield"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="15dp"
            />
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >

            <TextView
                    android:id="@+id/teamHomeForward"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="15dp"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/forward"
                    android:gravity="center"
                    android:textStyle="bold"
            />
            <TextView
                    android:id="@+id/teamAwayForward"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                android:layout_marginEnd="15dp"
            />
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >

            <TextView
                    android:id="@+id/teamHomeSubstitute"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="15dp"
            />
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/substitutes"
                    android:gravity="center"
                    android:textStyle="bold"
            />
            <TextView
                    android:id="@+id/teamAwaySubstitute"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="15dp"
            />
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
    </LinearLayout>
</ScrollView>